[metadata]
name = macpie
# Version needs regex in setup.py.
url = https://github.com/UCSFMemoryAndAging/macpie
project_urls =
    Code = https://github.com/UCSFMemoryAndAging/macpie
license = BSD-2-Clause
maintainer = Regents of the University of California
maintainer_email = albert.lee2@ucsf.edu
description = A Python library and command line tool for clinical research data analysis.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    macpie = macpie.cli.macpie.main:main
    mpsql = macpie.cli.mpsql.main:main

[tool:pytest]
addopts = -ra -s
testpaths = tests
filterwarnings =
    error
    # ignore distutils DeprecationWarning for python 3.10
    ignore::DeprecationWarning

[coverage:run]
branch = True
source =
    macpie
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
ignore =
    # slice notation whitespace, invalid
    E203
    # bin op line break, invalid
    W503
max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/macpie/*/__init__.py:F401
    src/macpie/pandas/accessor.py:F403, F405
    tests/conftest.py:F401
exclude =
    .tox,
    build
